--- a/custom/custom.css
+++ b/custom/custom.css
@@ -7,3 +7,18 @@
     font-size: 20px;
     line-height: 41px;
 }
+.k-main .details .comments-area {
+    margin-top: 16px;
+    padding: 1.6px 16px 16px;
+    border-radius: 2px;
+    background-color: #fff;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  }
+  
+  .k-main .details .post-2 .comments-area {
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+  }
